--- a/main.html
+++ b/main.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,12 +9,147 @@
     <link rel="stylesheet" href="./bootstraps/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <header class="container-fluid bg-light">
+        <!-- navbar -->
+        <nav class="navbar navbar-expand-lg navbar-light ">
+            <div class="container">
+                <a class="navbar-brand d-flex text-align-center " href="#"><img src="./liveEduLogo.png" height="60px"
+                        width="60px" alt="">
+                    <span class="ps-1 fs-2 ">LivEdu</span></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+                        <!-- dropdown link for Home -->
+
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                Home
+                            </a>
+                            <ul class="dropdown-menu shadow-lg" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item active" href="#">Home defult</a></li>
+                                <li><a class="dropdown-item" href="#">Home Eudcation</a></li>
+                                <li><a class="dropdown-item" href="#">Home Academy</a></li>
+                                <li><a class="dropdown-item" href="#">Home Universit</a></li>
+                                <li><a class="dropdown-item" href="#">Home College</a></li>
+                                <li><a class="dropdown-item" href="#">Home kindergraden</a></li>
+                                <li><a class="dropdown-item" href="#">Home tutor</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="#">Free access</a></li>
+                                <li><a class="dropdown-item" href="#">Free Class</a></li>
+                                <li><a class="dropdown-item" href="#">Free Books and note</a></li>
+                            </ul>
+                        </li>
+
+                        <!-- dropdown link for pages -->
+
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                Pages
+                            </a>
+                            <ul class="dropdown-menu shadow-lg" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="#">course</a></li>
+                                <li><a class="dropdown-item" href="#">about instrctor</a></li>
+                                <li><a class="dropdown-item" href="#">instrctor Single</a></li>
+                                <li><a class="dropdown-item" href="#">Want to be instrctor</a></li>
+                                <li><a class="dropdown-item" href="#">Want to be instrctor</a></li>
+                                <li><a class="dropdown-item" href="#">authorication</a></li>
+                                <li><a class="dropdown-item" href="#">FAQs</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="#">WishList</a></li>
+                            </ul>
+                        </li>
+                        <!-- dropdown link for account -->
+
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                Account
+                            </a>
+                            <ul class="dropdown-menu shadow-lg" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="#"><i class="fas fa-chalkboard-teacher pe-2"></i>
+                                        instructor</a></li>
+                                <li><a class="dropdown-item" href="#"><i class="fas fa-user-graduate pe-2"></i>
+                                        student</a></li>
+                                <li><a class="dropdown-item" href="#"><i class="fas fa-users-cog pe-2"></i> Admin</a>
+                                </li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="#"><i class="fas fa-user-edit pe-2"></i>Edit
+                                        profile</a></li>
+                                <li><a class="dropdown-item" href="#"><i class="fas fa-tools pe-2"></i>Seting</a></li>
+                                <li><a class="dropdown-item" href="#"><i class="fas fa-trash-alt pe-2"></i>Delete
+                                        Profile</a></li>
+                            </ul>
+                        </li>
+
+                        <!-- dropdown mengement list -->
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                Mengement
+                            </a>
+                            <div  class="dropdown-menu shadow-lg" aria-labelledby="navbarDropdown">
+                                <div class="row">
+                                    <div class="col-lg-3">
+                                        <ul>
+                                            <li><a class="dropdown-item" href="#"><i class="fas fa-chalkboard-teacher pe-2"></i>
+                                                    instructor</a></li>
+                                            <li><a class="dropdown-item" href="#"><i class="fas fa-user-graduate pe-2"></i>
+                                                    student</a></li>
+                                            <li><a class="dropdown-item" href="#"><i class="fas fa-users-cog pe-2"></i>
+                                                    Admin</a></li>
+                                            <li>
+                                                <hr class="dropdown-divider">
+                                            </li>
+                                            <li><a class="dropdown-item" href="#"><i class="fas fa-user-edit pe-2"></i>Edit
+                                                    profile</a></li>
+                                            <li><a class="dropdown-item" href="#"><i class="fas fa-tools pe-2"></i>Seting</a>
+                                            </li>
+                                            <li><a class="dropdown-item" href="#"><i class="fas fa-trash-alt pe-2"></i>Delete
+                                                    Profile</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                              
+                            </div>
+
+                        </li>
+
+                    </ul>
+                    <form class="d-flex">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    </form>
+                    <i class="fas fa-user fs-4 p-2"></i>
+                </div>
+            </div>
+        </nav>
+
+
+
+    </header>
 
 
 
 
+
+
+    <!-- fontawasome and js bootstrap locail link -->
+    <script src="https://kit.fontawesome.com/f0ecdff264.js" crossorigin="anonymous"></script>
     <script src="./bootstraps/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
