--- a/main.html
+++ b/main.html
@@ -96,37 +96,48 @@
                             </ul>
                         </li>
 
-                        <!-- dropdown mengement list -->
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                Mengement
-                            </a>
-                            <div  class="dropdown-menu shadow-lg" aria-labelledby="navbarDropdown">
-                                <div class="row">
-                                    <div class="col-lg-3">
-                                        <ul>
-                                            <li><a class="dropdown-item" href="#"><i class="fas fa-chalkboard-teacher pe-2"></i>
-                                                    instructor</a></li>
-                                            <li><a class="dropdown-item" href="#"><i class="fas fa-user-graduate pe-2"></i>
-                                                    student</a></li>
-                                            <li><a class="dropdown-item" href="#"><i class="fas fa-users-cog pe-2"></i>
-                                                    Admin</a></li>
-                                            <li>
-                                                <hr class="dropdown-divider">
-                                            </li>
-                                            <li><a class="dropdown-item" href="#"><i class="fas fa-user-edit pe-2"></i>Edit
-                                                    profile</a></li>
-                                            <li><a class="dropdown-item" href="#"><i class="fas fa-tools pe-2"></i>Seting</a>
-                                            </li>
-                                            <li><a class="dropdown-item" href="#"><i class="fas fa-trash-alt pe-2"></i>Delete
-                                                    Profile</a></li>
-                                        </ul>
+                        <!-- dropdown mengement list && mega meun edit text needs -->
+
+                        <li class="nav-item dropdown dropdown-mega position-static">
+                            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown"
+                                data-bs-auto-close="outside">Megamenu</a>
+                            <div class="dropdown-menu shadow">
+                                <div class="mega-content px-4">
+                                    <div class="container-fluid">
+                                        <div class="row">
+                                            <div class="col-12 col-sm-4 col-md-3 py-4">
+                                                <h5>Title</h5>
+                                                <div class="list-group">
+                                                    <a class="list-group-item" href="#">Mega Menu Link</a>
+                                                    <a class="list-group-item" href="#">Mega Menu Link</a>
+                                                    <a class="list-group-item" href="#">Mega Menu Link</a>
+                                                </div>
+                                            </div>
+                                            <div class="col-12 col-sm-4 col-md-3 py-4">
+                                                <h5>Card Title</h5>
+                                                <div class="card">
+                                                    <img src="./Image/14.svg" class="img-fluid" alt="image">
+                                                    <div class="card-body">
+                                                        <p class="card-text">Description goes here...</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-12 col-sm-4 col-md-3 py-4">
+                                                <h5>Title</h5>
+                                                <p>Description goes here...</p>
+                                            </div>
+                                            <div class="col-12 col-sm-12 col-md-3 py-4">
+                                                <h5>Title</h5>
+                                                <div class="list-group">
+                                                    <a class="list-group-item" href="#">Menu Link</a>
+                                                    <a class="list-group-item" href="#">Menu Link</a>
+                                                    <a class="list-group-item" href="#">Menu Link</a>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
-                              
                             </div>
-
                         </li>
 
                     </ul>
@@ -138,6 +149,44 @@
             </div>
         </nav>
 
+
+        <!-- header bannar section  -->
+
+        <div class="container-fluid header-bannar-section">
+            <div class="row align-items-center">
+                <div class="col-lg-6 ps-5 my-3">
+                    <h1>Limitless learning at your <span class="bannar-title-word"> fingertips </span></h1>
+                    <p>Online learning and teaching marketplace with 5K+ courses & 10M students. Taught by experts to
+                        help you acquire new skills.</p>
+
+                    <div class="d-flex flex-column justify-content-center">
+
+                        <!-- bannar main-toics section -->
+                        <!-- error ache  small flex box kaj kore na keno -->
+                        <div class="d-flex mt-5 flex-lg-row flex-md-column flex-sm-column">
+                            <p><i class="fas fa-arrow-alt-circle-right ms-2"></i> Learn with experts </p>
+                            <p><i class="fas fa-arrow-alt-circle-right ms-2"></i> Get certificate</p>
+                            <p><i class="fas fa-arrow-alt-circle-right ms-2"></i> Get membership</p>
+                        </div>
+
+                        <!-- bannar button section-->
+                        <div class="d-flex align-items-center">
+                            <button class="btn btn-outline-danger btn-lg">GET START </button>
+                            <p class="ms-2" style="margin-bottom: 0px;"><i class="far fa-play-circle  "></i>mx player</p>
+                        </div>
+                    </div>
+
+                    <!-- bannar secation profile image -->
+                </div>
+                <div class="col-lg-6 d-flex justify-content-center bannar-secation-profile">
+                    <img src="./Image/profile-photo/07.png" alt="">
+                </div>
+            </div>
+
+
+        </div>
+
+        
 
 
     </header>
