short overview part is added

--- a/main.html
+++ b/main.html
@@ -172,7 +172,8 @@
                         <!-- bannar button section-->
                         <div class="d-flex align-items-center">
                             <button class="btn btn-outline-danger btn-lg">GET START </button>
-                            <p class="ms-2" style="margin-bottom: 0px;"><i class="far fa-play-circle  "></i>mx player</p>
+                            <p class="ms-2" style="margin-bottom: 0px;"><i class="far fa-play-circle  "></i>mx player
+                            </p>
                         </div>
                     </div>
 
@@ -186,7 +187,83 @@
 
         </div>
 
-        
+        <!-- short overview part of we website section  -->
+
+        <section class="container-fluid my-5">
+            <div class="container">
+                <div class="row g-2 d-flex justify-content-center">
+                    <div
+                        class="col-lg-3 col-md-6 col-sm-12 bg-warning d-flex align-items-center justify-content-center rounded-3 shadow-lg">
+                        <i class="fas fa-laptop over-view-icon"></i>
+                        <div class="ps-3">
+                            <h1 style="margin-bottom: 0px;">12k <br> </h1>
+                            <p><span class="over-view-text">online</span> </p>
+                        </div>
+                    </div>
+                    <div
+                        class="col-lg-3 col-md-6 col-sm-12 bg-light d-flex align-items-center justify-content-center rounded-3 shadow-lg">
+                        <i class="fas fa-id-card-alt over-view-icon"></i>
+                        <div class="ps-3">
+                            <h1 style="margin-bottom: 0px;">50+ <br> </h1>
+                            <p><span class="over-view-text">Expert Tutors</span> </p>
+                        </div>
+                    </div>
+                    <div
+                        class="col-lg-3 col-md-6 col-sm-12 bg-info d-flex align-items-center justify-content-center rounded-3 shadow-lg">
+                        <i class="fas fa-user-graduate over-view-icon"></i>
+                        <div class="ps-3">
+                            <h1 style="margin-bottom: 0px;">50K+ <br> </h1>
+                            <p><span class="over-view-text">online Students</span> </p>
+                        </div>
+                    </div>
+                    <div
+                        class="col-lg-3 col-md-6 col-sm-12 bg-success d-flex align-items-center justify-content-center rounded-3 shadow-lg">
+                        <i class="far fa-address-card over-view-icon"></i>
+                        <div class="ps-3">
+                            <h1 style="margin-bottom: 0px;">3k+ <br> </h1>
+                            <p><span class="over-view-text">Certified Course</span> </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- problme ache eikhane  -->
+
+        <section class="container-fluid my-5">
+            <div class="container">
+                <div class="row g-2">
+                    <div class="col-lg-3 col-md-6 col-sm-12 bg-warning d-flex align-items-center justify-content-center rounded-3 shadow-lg">
+                        <i class="fas fa-laptop over-view-icon"></i>
+                        <div class="ps-3">
+                            <h1 style="margin-bottom: 0px;">12k <br> </h1>
+                            <p><span class="over-view-text">online</span> </p>
+                        </div>
+                    </div>
+                    
+                    <div class="col-4">
+                        <div class="p-3 border bg-light">Custom column padding</div>
+                    </div>
+                    <div class="col-3">
+                        <div class="p-3 border bg-light">Custom column padding</div>
+                    </div>
+                    <div class="col-3">
+                        <div class="p-3 border bg-light">Custom column padding</div>
+                    </div>
+                    <div class="col-3">
+                        <div class="p-3 border bg-light">Custom column padding</div>
+                    </div>
+                    <div class="col-3">
+                        <div class="p-3 border bg-light">Custom column padding</div>
+                    </div>
+                    <div class="col-3">
+                        <div class="p-3 border bg-light">Custom column padding</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
 
 
     </header>
