course nav section is added

--- a/main.html
+++ b/main.html
@@ -233,14 +233,15 @@
         <section class="container-fluid my-5">
             <div class="container">
                 <div class="row g-2">
-                    <div class="col-lg-3 col-md-6 col-sm-12 bg-warning d-flex align-items-center justify-content-center rounded-3 shadow-lg">
+                    <div
+                        class="col-lg-3 col-md-6 col-sm-12 bg-warning d-flex align-items-center justify-content-center rounded-3 shadow-lg">
                         <i class="fas fa-laptop over-view-icon"></i>
                         <div class="ps-3">
                             <h1 style="margin-bottom: 0px;">12k <br> </h1>
                             <p><span class="over-view-text">online</span> </p>
                         </div>
                     </div>
-                    
+
                     <div class="col-4">
                         <div class="p-3 border bg-light">Custom column padding</div>
                     </div>
@@ -264,6 +265,31 @@
         </section>
 
 
+
+        <!-- main section -->
+
+
+        <!-- tutorial & course section -->
+
+        <main class="my-5">
+            <div class="text-center">
+                <h1>Most Popular Courses</h1>
+                <p>choose frm hundreds of cours from specialist organizations</p>
+                <div></div>
+            </div>
+            <!-- eita problem ache  -->
+            <div class="text-center bg-danger py-2">
+                <nav aria-label="Page navigation example ">
+                    <ul class="pagination justify-content-center">
+                        <li class="page-item"><a class="page-link" href="#">Data science</a></li>
+                        <li class="page-item"><a class="page-link" href="#">Web development</a></li>
+                        <li class="page-item"><a class="page-link" href="#">App development</a></li>
+                        <li class="page-item"><a class="page-link" href="#">Mechine Learning </a></li>
+                        <li class="page-item"><a class="page-link" href="#">AI Course</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </main>
 
 
     </header>
