--- a/main.html
+++ b/main.html
@@ -655,7 +655,8 @@
             <div class="row ">
                 <div class="col-lg-8 col-md-6 col-sm-12 text-light">
                     <h1>Become an Instructor!</h1>
-                    <p>Speedily say has suitable disposal add boy. On forth doubt miles of child. Exercise joy man children rejoiced. Yet uncommonly his ten who diminution astonished.</p>
+                    <p>Speedily say has suitable disposal add boy. On forth doubt miles of child. Exercise joy man
+                        children rejoiced. Yet uncommonly his ten who diminution astonished.</p>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 d-flex align-items-center">
                     <button class="btn btn-outline-warning btn-lg">Start Teaching Today</button>
@@ -665,9 +666,71 @@
     </section>
 
 
+
+    
+<!----------------------------------------------------->
     <!-- Tranding course section -->
+<!----------------------------------------------------->
+    <section class="container-fluid my-5">
+        <div class="text-center">
+            <h1>Our Trending Courses</h1>
+            <p>Checj out most courses in the the market</p>
+        </div>
+
+        <!-- trend course card develop -->
+        <div class="container">
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <div class="col">
+                    <div class="card shadow-lg">
+                        <img src="./Image/trending-course/14.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <!-- card highlight -->
+                            <div class="d-flex align-items-center justify-content-lg-between">
+                                <div class="d-flex card-title ">
+                                    <p class="bg-danger rounded-3 px-2 mx-1 fw-bold text-light">Pro level</p>
+                                    <p class="bg-warning rounded-3 px-2 mx-1 fw-bold text-light">Advance</p>
+                                </div>
+                                <i class="far fa-bookmark heart-filled"></i>
+                            </div>
+                            <h5 class="card-title">The Compelate Digital Marketinf Course</h5>
+                            <p class="card-text">8 in One course.</p>
+                        </div>
+                        <div class="card-body">
+                            <i class="fas fa-star star-filled"></i>
+                            <i class="fas fa-star star-filled"></i>
+                            <i class="fas fa-star star-filled"></i>
+                            <i class="fas fa-star star-filled"></i>
+                            <i class="fas fa-star"></i>
+                            4.0/5.0
+                        </div>
+                        <div class="d-flex align-items-center justify-content-start ">
+                            <div class="d-flex align-items-center mx-2">
+                                <i class="far fa-clock time-filled"></i>
+                                <small class="text-muted ms-2">3h 40min</small>
+                            </div>
+                            <div class="d-flex align-items-center mx-2">
+                                <i class="far fa-list-alt time-filled"></i>
+                                <small class="text-muted ms-2">15 lectures</small>
+                            </div>
+                        </div>
+                        <!-- card footer part -->
+                        <div class="card-footer mt-4 d-flex align-items-center justify-content-between">
+                            <div class="d-flex align-items-center mx-2">
+                                <img src="./Image/profile-photo/04.jpg" width="40px" height="40px" alt="">
+                                <small class="text-muted ms-2">Jhon Smait</small>
+                            </div>
+                            <div class="d-flex align-items-center mx-2">
+                                <i class="fas fa-dollar-sign heart-filled"></i>
+                                <h3 class="text-success">250</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
+    </section>
 
 
 
