Feed back secatio is added

--- a/main.html
+++ b/main.html
@@ -667,10 +667,10 @@
 
 
 
-    
-<!----------------------------------------------------->
+
+    <!----------------------------------------------------->
     <!-- Tranding course section -->
-<!----------------------------------------------------->
+    <!----------------------------------------------------->
     <section class="container-fluid my-5">
         <div class="text-center">
             <h1>Our Trending Courses</h1>
@@ -728,11 +728,119 @@
                 </div>
             </div>
         </div>
-
-
     </section>
 
 
+    <!--------------------------------------------->
+    <!-- feedback section -->
+    <!--------------------------------------------->
+
+    <section class="container-fluid">
+
+        <div class="container">
+            <div class="row g-2 align-items-center">
+                <!-- student and teachers reviews -->
+                <div class="col-7">
+                    <div class="p-3 border bg-light">
+                        <div class="row">
+                            <div class="row g-4">
+                                <!-- left review -->
+                                <div class="col-7">
+                                    <!-- cotain 2 div -->
+                                    <div class="">
+                                        <!-- top div -->
+                                        <div class="text-center p-3 border shadow-lg rounded-3 mb-4">
+                                            <img class="rounded-circle" src="./Image/profile-photo/01.jpg" width="100"
+                                                height="100" alt="">
+                                            <p>Moonlight newspaper up its enjoyment agreeable depending. Timed voice
+                                                share led him to widen noisy young. At weddings believed laughing </p>
+                                            <div>
+                                                <i class="fas fa-star star-filled"></i>
+                                                <i class="fas fa-star star-filled"></i>
+                                                <i class="fas fa-star star-filled"></i>
+                                                <i class="fas fa-star star-filled"></i>
+                                                <i class="fas fa-star"></i>
+                                            </div>
+                                            <p class="fw-bold mt-3">Carolyn Ortiz</p>
+                                        </div>
+                                        <!-- down div %% all rating part -->
+                                        <div class="text-center w-50 float-end bg-danger p-3 border shadow-lg rounded-3">
+                                            <h3>4.5/5.0</h3>
+                                            <div>
+                                                <i class="fas fa-star star-filled"></i>
+                                                <i class="fas fa-star star-filled"></i>
+                                                <i class="fas fa-star star-filled"></i>
+                                                <i class="fas fa-star star-filled"></i>
+                                                <i class="fas fa-star"></i>
+                                            </div>
+                                            <p class="fw-bold mt-3">Based on 3265 rating</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- right side review -->
+                                <div class="col-5">
+                                    <!-- total left side -->
+                                    <div class="">
+                                        <!-- top part and mentors section-->
+                                        <div class="p-3 border bg-info shadow-lg rounded-3">
+                                            <h2>100+ Verified Mentore</h2>
+                                            <!-- mentor one -->
+                                            <div class="d-flex align-items-center ">
+                                                <img src="./Image/profile-photo/02.jpg" width="50px" height="50px" alt="">
+                                                <div class="ms-2">
+                                                    <h5>Lori Stevens <br> <small> Tutor of physic </small> </h5>
+                                                </div>
+                                            </div>
+                                             <!-- mentor two -->
+                                            <div class="d-flex align-items-center ">
+                                                <img src="./Image/profile-photo/04.jpg" width="50px" height="50px" alt="">
+                                                <div class="ms-2">
+                                                    <h5>Lori Stevens <br> <small> Tutor of physic </small> </h5>
+                                                </div>
+                                            </div>
+                                             <!-- mentor three -->
+                                            <div class="d-flex align-items-center ">
+                                                <img src="./Image/profile-photo/03.jpg" width="50px" height="50px" alt="">
+                                                <div class="ms-2">
+                                                    <h5>Lori Stevens <br> <small> Tutor of physic </small> </h5>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <!-- down part -->
+                                        <!-- just use a margin top for create a different -->
+                                        <div class="text-center p-3 border shadow-lg rounded-3 mt-5 mb-4">
+                                            <img class="rounded-circle" src="./Image/profile-photo/03.jpg" width="100"
+                                                height="100" alt="">
+                                            <p>At wedding believed laughing althrough the Moonlight newspaper uo its enjoyment agreeble depending. </p>
+                                            <div>
+                                                <i class="fas fa-star star-filled"></i>
+                                                <i class="fas fa-star star-filled"></i>
+                                                <i class="fas fa-star star-filled"></i>
+                                                <i class="fas fa-star star-filled"></i>
+                                                <i class="fas fa-star"></i>
+                                            </div>
+                                            <p class="fw-bold mt-3">Yen ben ling</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- text part in this section and right section-->
+                <div class="col-5">
+                    <div class="p-3 border bg-light">
+                        <h1>Some valuable feedback from our students</h1>
+                        <p>Supposing so be resolving breakfast am or perfectly. It drew a hill from me. Valley by oh
+                            twenty direct me so. Departure defective arranging rapturous did believe him all had
+                            supported. Family months lasted simple set nature vulgar him. Picture for attempt joy
+                            excited ten carried manners talking how.</p>
+                        <button class="btn btn-primary btn-lg text-light">View Reviews</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
