--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>link</title>
+    <title>LivEdu</title>
     <link rel="stylesheet" href="./bootstraps/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
