menter number sign update

--- a/index.html
+++ b/index.html
@@ -899,7 +899,7 @@
                                     <div class="">
                                         <!-- top part and mentors section-->
                                         <div class="p-3 border bg-info shadow-lg rounded-3 d-lg-block d-none">
-                                            <h2>100+ Verified Mentore</h2>
+                                            <h2>100<sup>+</sup> Verified Mentore</h2>
                                             <!-- mentor one -->
                                             <div class="d-flex align-items-center ">
                                                 <img src="./Image/profile-photo/02.jpg" width="45px" height="45px"
